install/stream/rtmp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rtmp-server
  namespace: runai-drone
spec:
  selector:
    app: rtmp-server
  ports:
    - protocol: TCP
      port: 1935
      targetPort: 1935
      nodePort: 32000
      name: rtmp
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: hls
    - protocol: TCP
      port: 9113
      targetPort: 9113
      name: nginx-exporter
  type: NodePort
